working on styling and sass mixins

--- a/index.html
+++ b/index.html
@@ -37,15 +37,14 @@
 <body>
   <div class="container" id="container__">
 
-    <!-- <div class="menu" id="menu__toggle">
+    <nav class="menu" id="menu__toggle">
       <div class="button__container" id="menu__button">
         <span class="container__burger"></span>
         <span class="container__burger"></span>
         <span class="container__burger"></span>
       </div>
-      <div class="menu__list" id="menu__container">
-      </div>
-    </div> -->
+      <div class="menu__list" id="menu__container"></div>
+    </nav>
 
   </div>
 </body>
