--- a/index.html
+++ b/index.html
@@ -35,18 +35,8 @@
 </head>
 
 <body>
-  <div class="container" id="container__">
-
-    <nav class="menu" id="menu__toggle">
-      <div class="button__container" id="menu__button">
-        <span class="container__burger"></span>
-        <span class="container__burger"></span>
-        <span class="container__burger"></span>
-      </div>
-      <div class="menu__list" id="menu__container"></div>
-    </nav>
-
-  </div>
+  <div class="loader"></div>
+  <div id="container"></div>
 </body>
 
 </html>
