WIP changed some comments

--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!doctype html>
-<html class="no-js" lang="en" dir="ltr" prefix="og: https://ogp.me/ns#">
+<html class="no-js" lang="sv" dir="ltr" prefix="og: https://ogp.me/ns#">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Jessica Silfver - Front end developer student</title>
 
-  <meta name="description" content="Studerar just nu på Medieinstitutet som front end utvecklare. hello@jessica.se">
+  <meta name="description" content="Frontend developer student på Medieinstitutet">
   <meta name="kewords" content="CV, portfolio, Front end developer, Webdesign">
   <meta property="og:title" content="Jessica Silfver">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.jessicasilfver.se/">
   <meta property="og:image" content="./logo.png">
-  <meta property="og:image:alt" content="logga med initialer JS">
+  <!-- <meta property="og:image:alt" content="logga med initialer JS"> -->
+  <!-- <meta property="og:url" content="https://www.jessicasilfver.se/"> -->
 
   <link rel="apple-touch-icon" sizes="180x180" href="./icons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="./icons/favicon-32x32.png">
